--- a/css/agency.css
+++ b/css/agency.css
@@ -268,6 +268,7 @@ header {
     background-image: url(../img/header-image.jpg);
     background-position: center center;
     background-repeat: none;
+    background-color: #556270;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
